syntax = "proto3";

package mollyshove.cs300.proto;

option java_package = "com.mollyshove.psu.cs300";
option java_outer_classname = "NetworkData";

message Message {


    message LoginInfo {
        string userName = 1;
        string password = 2;
        bool online = 3;
    }

    message PublicMessage {
        string sender = 1;
        string message = 2;
    }

    message PrivateMessage {
        string sender = 1;
        string recipient = 2;
        string message = 3;
    }

    //one of lets you make prettier menues :D
    oneof messageType{
        LoginInfo loginInfo = 1;
        PublicMessage publicMessage = 2;
        PrivateMessage privateMessage = 3;

    }
}